# db-train-info

./: Cargo.toml  README.md
assets/: example.json  tripInfo.json
src/: lib.rs  status.rs  trip_info.rs
src/trip_info/: delay_reason.rs  misc_info.rs  mod.rs  station_info.rs  stop.rs  time_info.rs  track_info.rs  train_vicinity.rs  trip.rs
